[package]
name = "render-viewer"
version = "0.2.0"
authors = ["Fedor Rusak <fedor.rusak@infobip.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fltk = "0.15.11"
fonterator = { version = "0.9", features = ["monospace-font"] }
footile = "0.6.0"
pix = "0.13.1"